S19-APK_Demo/kubernetes-crs/http_route_cr.yaml
---
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "01eeaed4-a041-1550-8c53-98ed46ba1562"
  labels:
    api-name: "b244b5945bcfcbdd4d06040e3d7d9fd09086401f"
    api-version: "fe753b23556364128df95d2ef135d87743e9d4a7"
    organization: "7505d64a54e061b7acd54ccd58b49dc43500b635"
    managed-by: "apk"
spec:
  hostnames:
  - "default.gw.wso2.com"
  rules:
  - matches:
    - path:
        type: "RegularExpression"
        value: "/wellness-recommendation"
      method: "GET"
    filters: []
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-f7b8294da1015579cda8b518fa0504d2476010a1-api"
  parentRefs:
  - group: "gateway.networking.k8s.io"
    kind: "Gateway"
    name: "default"
    sectionName: "httpslistener"
